style: fixes warning msg alignment and adds styles to <code> element

--- a/src/components/ConfigScreen/ConfigScreen.css
+++ b/src/components/ConfigScreen/ConfigScreen.css
@@ -1,7 +1,14 @@
 .ix-helper-text {
   margin-top: 0.5rem;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  font-family: -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Helvetica,
+    Arial,
+    sans-serif,
+    Apple Color Emoji,
+    Segoe UI Emoji,
+    Segoe UI Symbol;
   font-size: 0.875rem;
   line-height: 1.5;
   display: block;
@@ -34,3 +41,9 @@
   max-width: 500px;
 }
 
+.ix-config-description > code {
+  padding: 0.5px 4px;
+  border-radius: 3px;
+  background-color: rgb(85, 85, 85);
+  color: orange;
+}
